<resources>
    <string name="app_name">TheCheezery</string>
    <string name="welcome">Welcome to the cheezery</string>
    <string name="description">Home of the most wonderful desserts</string>
    <string name="btnStart">Get Started</string>
    <string name="name">Name</string>
    <string name="lastName">Last name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="terms">I have read and accept terms and conditions of The Cheezery</string>
    <string name="sign_in">Sign in</string>
    <string name="menu">Menu</string>
    <string name="coldDrinks">Cold drinks</string>
    <string name="hotDrinks">Hot drinks</string>
    <string name="sweets">Sweets</string>
    <string name="salties">Salties</string>
    <string name="combos">Combos</string>
    <string name="custom">Custom</string>
</resources>